updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a chemist at a cloud lab.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>San Diego, CA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Video games, board games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>One that also allows me to enjoy life outside of work.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Francisco.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It's an in-demand skillset.</p>
     </section>
 
     <footer id="footer">
